# ai_diffusion_state

./: .env.example  .gitignore  Makefile  README.md  fast_iids_convert.py  iids_diag.py  iids_filter_diag.py  iids_find_detail_table.py  patch_iids_converter.py  pyproject.toml  quick_iids_convert.py  stream_iids_keys.py
configs/: audited_firm_city_registry.yml  audited_firm_city_registry_supplement.yml  city_aliases.yml  city_geo_tokens.yml  city_locality_aliases.yml  export_sector_groups.yml  hs_smart_factory_bridge.yml  industry_mapping.yml  keywords_zh.yml  patent_taxonomy.yml  province_normalization.yml  scenario_tag_rules.yml  sources.yml
docs/: ATLAS_IIDS_CLEAN_RESTART_RUNBOOK.md  ATLAS_IIDS_CLOUD_VM_ENGINEER_INSTRUCTIONS.md  ATLAS_IIDS_EXECUTION_CHECKLIST.md  ATLAS_IIDS_EXTERNAL_GEO_DROPZONE.md  ATLAS_IIDS_GCP_VM_SETUP.md  ATLAS_IIDS_GEOGRAPHY_ENGINEER_RUNBOOK.md  ATLAS_IIDS_GEOGRAPHY_PROCUREMENT_BRIEF.md  ATLAS_IIDS_GEO_PROGRAM_STATUS.md  ATLAS_IIDS_GEO_VENDOR_HANDOFF.md  ATLAS_IIDS_IIDS_JOIN_SAFETY.md  ATLAS_IIDS_TIERED_GEOGRAPHY.md  ATLAS_IIDS_TIERED_ROBUSTNESS_FROZEN.md  ATLAS_PHASE2_PATENT_EXPORT_AND_MODEL_RUNBOOK.md  ATLAS_PHASE2_REAL_EVIDENCE_INSTRUCTIONS.md  ATLAS_REAL_PATENT_DATA_ACQUISITION_DECISION.md  ATLAS_SPRINT_ENGINEERING_INSTRUCTIONS.md  ATLAS_SPRINT_PHASE1_EXECUTION_PLAN.md  CURRENT_SPRINT_PRIORITIES.md  DATA_CONTRACTS.md  DEEP_RESEARCH_A_B2_FINDINGS.md  DEEP_RESEARCH_A_B2_ROUND2.md  DEEP_RESEARCH_A_B2_ROUND3.md  ENGINEER_A_B_EXECUTION_STANDARD.md  ENGINEER_EVIDENCE_FREEZE_NOTE.md  ENGINEER_HANDOFF_PACKET.md  ENGINEER_NEXT_STEPS.md  _row0106.csv  (+22 more)
(+534 files in other folders)
